fix a spacing issue

--- a/src/sa_web/static/sass/_content.sass
+++ b/src/sa_web/static/sass/_content.sass
@@ -261,7 +261,7 @@ a.auth-inline
   font-family: FontAwesome
   overflow: hidden
   .story-tagline
-    width: 80%
+    width: 100%
     padding-left: 10px
     padding-right: 10px
     font-family: $default-font-family
